Add response services

--- a/assets/public_html/warehouse_request.html
+++ b/assets/public_html/warehouse_request.html
@@ -33,10 +33,6 @@
             <input type="number" name="wqs">
         </div>
         <div class="form-input-group">
-            <label for="size">Location: </label>
-            <input type="text" name="wqs">
-        </div>
-        <div class="form-input-group">
             <label for="size">Additional specification: </label>
             <textarea name="wrspecs" rows="3" cols="10"></textarea>
         </div>
@@ -44,6 +40,10 @@
         <div class="form-input-submit">
           <button type="submit">Search </button>
         </div>
+        <div class="form-input-reset">
+          <button type="reset">Reset</button>
+        </button>
+        
     </form>
   </body>
 </html>
