--- a/assets/public_html/index.html
+++ b/assets/public_html/index.html
@@ -30,7 +30,7 @@
          </div>
          <div class="menu h-menu rltv iblk fpv ">
             <ul>
-               <li class="active"><a href="#">Home</a></li>
+               <li class="active"><a href="/home">Home</a></li>
                <li><a href="#">Services</a></li>
                <li><a href="#">About</a></li><!-- team info shd be here -->
                <li><a href="#">Contact</a></li>
@@ -59,8 +59,8 @@
                   <h3>Own a warehouse ?</h3>
                   <h4>Register with us</h4>
                </div>
-               <div class="dv-notify" style="color: green">Thank you for registering with us.</div>
-               <form action="/index.html" class="operator pd30 pdtb20 dv-signup">
+               <!-- <div class="dv-notify" style="color: green">Thank you for registering with us.</div> -->
+               <form action="/depositor_signup" class="operator pd30 pdtb20" method="post" enctype="multipart/json">
                   <div class="fields-row">
                      <div class="field-wrap">
                         <input type="text" id="depo-firstname" placeholder="first Name" title="" name="firstname">
